actions/passnet-k8s/passnet-organizer.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passnet-organizer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: passnet_organizer_service
  template:
    metadata:
      name: passnet-organizer-service
      labels:
        backend: passnet_organizer_service
    spec:
      containers:
        - name: passnet-organizer-service
          image: tony16019/passnet-organizer
          ports:
            - name: rest
              containerPort: 8084
            - name: grpc
              containerPort: 7074
        - name: passet-organizer-saga
          image: tony16019/passnet-organizer-saga
          ports:
            - name: saga-grpc
              containerPort: 6164
---
apiVersion: v1
kind: Service
metadata:
  name: passnet-organizer-cluster-ip
spec:
  type: ClusterIP
  selector:
    backend: passnet_organizer_service
  ports:
    - name: organizer-service-rest
      port: 8084
      targetPort: rest
    - name: organizer-service-grpc
      port: 7074
      targetPort: grpc
    - name: organizer-saga-grpc
      port: 6164
      targetPort: saga-grpc
