actions/passnet-k8s/passnet-recruitment.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passnet-recruitment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: passnet_recruitment_service
  template:
    metadata:
      name: passnet-recruitment-service
      labels:
        backend: passnet_recruitment_service
    spec:
      containers:
        - name: passnet-recruitment-service
          image: tony16019/passnet-recruitment
          ports:
            - name: rest
              containerPort: 8082
            - name: grpc
              containerPort: 7072
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
        - name: passnet-recruitment-saga
          image: tony16019/passnet-recruitment-saga
          ports:
            - name: saga-grpc
              containerPort: 6162
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: passnet-recruitment-cluster-ip
spec:
  type: ClusterIP
  selector:
    backend: passnet_recruitment_service
  ports:
    - name: recruitment-service-rest
      port: 8082
      targetPort: rest
    - name: recruitment-service-grpc
      port: 7072
      targetPort: grpc
    - name: recruitment-saga-grpc
      port: 6162
      targetPort: saga-grpc
