actions/passnet-k8s/passnet-user.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passnet-user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: passnet_user_service
  template:
    metadata:
      name: passnet-user-service
      labels:
        backend: passnet_user_service
    spec:
      containers:
        - name: passnet-user-service
          image: tony16019/passnet-user
          ports:
            - name: user-rest
              containerPort: 8080
            - name: user-grpc
              containerPort: 7070
        - name: passnet-user-saga
          image: tony16019/passnet-user-saga
          ports:
            - name: user-saga-grpc
              containerPort: 6160
---
apiVersion: v1
kind: Service
metadata:
  name: passnet-user-cluster-ip
spec:
  type: ClusterIP
  selector:
    backend: passnet_user_service
  ports:
    - name: user-service-rest
      port: 8080
      targetPort: user-rest
    - name: user-service-grpc
      port: 7070
      targetPort: user-grpc
    - name: user-saga-grpc
      port: 6160
      targetPort: user-saga-grpc
