actions/passnet-k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /passnet-user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: passnet-user-cluster-ip
                port:
                  number: 8080
          - path: /passnet-profile(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: passnet-profile-cluster-ip
                port:
                  number: 8081
          - path: /passnet-recruitment(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: passnet-recruitment-cluster-ip
                port:
                  number: 8082
          - path: /passnet-organizer(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: passnet-organizer-cluster-ip
                port:
                  number: 8084

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
